--- a/UE4ExtendedLibrary.uproject
+++ b/UE4ExtendedLibrary.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "UE4ExtendedLibrary",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
