--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,4 +6,8 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Level0.Level0
+GameDefaultMap=/Game/Level0.Level0
+GlobalDefaultGameMode=/Script/ExtendedLibrary.XLGameMode
 
